@@ -16,62 +16,92 @@
 
 <p>&nbsp;</p>
 
-## Welcome to the BoxLang Spring Boot Starter
+## 👋 Welcome to the BoxLang Spring Boot Starter
 
-The **BoxLang Spring Boot Starter** is a zero-configuration Spring Boot auto-configuration library that integrates the [BoxLang](https://www.boxlang.io) dynamic JVM language as a view engine inside any Spring Boot 3 web application. Write your templates in BoxLang's expressive `.bxm` markup syntax and let Spring MVC route requests to them — no boilerplate required.  You can also leverage any BoxLang features and libraries directly from your Java controllers, services, or any Spring-managed bean by just talking to the `BoxRuntime` API.
+The **BoxLang Spring Boot Starter** is a zero-configuration Spring Boot auto-configuration library that integrates the [BoxLang](https://www.boxlang.io) dynamic JVM language as a view engine inside any Spring Boot 3 web application. Write your templates in BoxLang's expressive `.bxm` markup syntax and let Spring MVC route requests to them — no boilerplate required. You can also leverage any BoxLang features and libraries directly from your Java controllers, services, or any Spring-managed bean by just talking to the `BoxRuntime` API.
 
+```java
+BoxRuntime boxlang = BoxRuntime.getInstance();
 ```
-boxlang = BoxRuntime.getInstance();
-```
 
-## What is BoxLang?
+---
 
-**BoxLang** is a modern dynamic JVM language that can be deployed on multiple runtimes: operating system (Windows/Mac/*nix/Embedded), web server, lambda, iOS, android, web assembly, and more. **BoxLang** combines many features from different programming languages, including Java, ColdFusion, Python, Ruby, Go, and PHP, to provide developers with a modern and expressive syntax.
+## 📖 Table of Contents
 
-**BoxLang** has been designed to be a highly adaptable and dynamic language to take advantage of all the modern features of the JVM and was designed with several goals in mind:
+- [What is BoxLang?](#-what-is-boxlang)
+- [Features](#-features)
+- [Requirements](#-requirements)
+- [Installation](#-installation)
+- [Quick Start](#-quick-start)
+- [Configuration](#%EF%B8%8F-configuration)
+- [BoxLang Configuration (boxlang.json)](#-boxlang-configuration-boxlangjson)
+- [Template Scopes & Model Integration](#-template-scopes--model-integration)
+- [How It Works](#-how-it-works)
+- [Project Structure](#-project-structure)
+- [Development Setup](#-development-setup)
+- [Hot-Reloading Templates](#-hot-reloading-templates)
+- [Building from Source](#-building-from-source)
+- [Running the Test Application](#-running-the-test-application)
+- [Running Tests](#-running-tests)
+- [IDE Tooling](#-ide-tooling)
+- [License](#-license)
+- [Open-Source & Professional Support](#-open-source--professional-support)
 
-* Be a rapid application development (RAD) scripting language and middleware.
-* Unstagnate the dynamic language ecosystem in Java.
-* Be dynamic, modular, lightweight, and fast.
-* Be 100% interoperable with Java.
-* Be modern, functional, and fluent (Think mixing CFML, Node, Kotlin, Java, and Clojure)
-* Be able to support multiple runtimes and deployment targets:
-  * Native OS Binaries (CLI Tooling, compilers, etc.)
-  * MiniServer
-  * Servlet Containers - CommandBox/Tomcat/Jetty/JBoss
-  * JSR223 Scripting Engines
-  * AWS Lambda
-  * Microsoft Azure Functions (Coming Soon)
-  * Android/iOS Devices (Coming Soon)
-  * Web assembly (Coming Soon)
-* Compile down to Java ByteCode
-* Allow backward compatibility with the existing ColdFusion/CFML language.
-* Great IDE, Debugger and Tooling: https://boxlang.ortusbooks.com/getting-started/ide-tooling
-* Scripting (Any OS and Shebang) and REPL capabilities
+---
 
-You can find our docs here: https://boxlang.ortusbooks.com/
+## 🌐 What is BoxLang?
 
-## Features
+**BoxLang** is a modern dynamic JVM language that can be deployed on multiple runtimes: operating system (Windows/Mac/*nix/Embedded), web server, lambda, iOS, Android, web assembly, and more. **BoxLang** combines many features from different programming languages, including Java, ColdFusion, Python, Ruby, Go, and PHP, to provide developers with a modern and expressive syntax.
 
-* **Zero-configuration auto-configuration** — drop the JAR on the classpath and Spring Boot wires everything automatically via `BoxLangAutoConfiguration`.
-* **BoxLang View Resolver** — a `BoxLangViewResolver` resolves logical view names (e.g. `"home"`) to BoxLang `.bxm` templates (e.g. `classpath:/templates/home.bxm`).
-* **Full web scopes** — templates have access to the complete set of BoxLang web scopes: `URL`, `Form`, `CGI`, `Cookie`, and `Request`.
-* **Spring Model integration** — every attribute added to the Spring `Model` is automatically injected into the BoxLang `variables` scope, accessible as `#variables.myKey#` in the template.
-* **Lifecycle-managed runtime** — the `BoxRuntime` starts early in the application lifecycle and shuts down gracefully when the context stops, with no manual wiring needed.
-* **Configurable via `application.properties`** — all settings are controlled through the `boxlang.*` property namespace; sensible defaults require no changes for basic use.
-* **Custom `boxlang.json` support** — supply your own BoxLang configuration file via classpath, file URI, or absolute path.
-* **Pluggable resolver order** — configure the view resolver's position in the Spring MVC resolver chain so BoxLang can coexist with Thymeleaf, FreeMarker, or any other view technology.
-* **Spring Boot 3 / Jakarta EE ready** — built against Spring Boot 3.x and the `jakarta.*` namespace.
+**BoxLang** has been designed to be a highly adaptable and dynamic language to take advantage of all the modern features of the JVM:
 
-## Requirements
+- 🚀 Rapid application development (RAD) scripting language and middleware
+- 💡 Dynamic, modular, lightweight, and fast
+- ☕ 100% interoperable with Java
+- 🎨 Modern, functional, and fluent
+- 🌍 Multi-runtime deployment:
+  - Native OS Binaries (CLI Tooling, compilers, etc.)
+  - MiniServer
+  - Servlet Containers — CommandBox/Tomcat/Jetty/JBoss
+  - JSR223 Scripting Engines
+  - AWS Lambda
+  - Microsoft Azure Functions *(Coming Soon)*
+  - Android/iOS Devices *(Coming Soon)*
+  - Web Assembly *(Coming Soon)*
+- 🔩 Compiles down to Java ByteCode
+- 🔄 Backward compatible with the ColdFusion/CFML language
+
+📚 Full documentation: https://boxlang.ortusbooks.com/
+
+---
+
+## ✨ Features
+
+- ⚙️ **Zero-configuration auto-configuration** — drop the JAR on the classpath and Spring Boot wires everything automatically via `BoxLangAutoConfiguration`.
+- 🖼️ **BoxLang View Resolver** — a `BoxLangViewResolver` resolves logical view names (e.g. `"home"`) to BoxLang `.bxm` templates (e.g. `classpath:/templates/home.bxm`).
+- 🌐 **Full web scopes** — templates have access to the complete set of BoxLang web scopes: `URL`, `Form`, `CGI`, `Cookie`, and `Request`.
+- 🔗 **Spring Model integration** — every attribute added to the Spring `Model` is automatically injected into the BoxLang `variables` scope, accessible as `#variables.myKey#` in the template.
+- 🔄 **Lifecycle-managed runtime** — the `BoxRuntime` starts early in the application lifecycle and shuts down gracefully when the context stops, with no manual wiring needed.
+- 🛠️ **Configurable via `application.properties`** — all settings are controlled through the `boxlang.*` property namespace; sensible defaults require no changes for basic use.
+- 📄 **Custom `boxlang.json` support** — supply your own BoxLang configuration file via classpath, file URI, or absolute path.
+- 🔀 **Pluggable resolver order** — configure the view resolver's position in the Spring MVC resolver chain so BoxLang can coexist with Thymeleaf, FreeMarker, or any other view technology.
+- 🏷️ **Spring Boot 3 / Jakarta EE ready** — built against Spring Boot 3.x and the `jakarta.*` namespace.
+
+---
+
+## 📋 Requirements
 
 | Dependency | Version |
 |---|---|
-| Java | 21+ |
-| Spring Boot | 3.4.x+ |
-| BoxLang | 1.11.0+ |
+| ☕ Java | 21+ |
+| 🍃 Spring Boot | 3.4.x+ |
+| ⚡ BoxLang | 1.11.0+ |
 
-## Installation
+> **Note:** Make sure `JAVA_HOME` points to a JDK 21+ installation before building or running.
+
+---
+
+## 📦 Installation
 
 ### Gradle
 
@@ -91,17 +121,26 @@ dependencies {
 </dependency>
 ```
 
-No `@EnableBoxLang` annotation or manual bean registration is required. Spring Boot's auto-configuration mechanism detects the starter on the classpath and configures everything automatically.
+> ✅ No `@EnableBoxLang` annotation or manual bean registration is required. Spring Boot's auto-configuration mechanism detects the starter on the classpath and configures everything automatically.
 
-## Quick Start
+---
 
-### 1. Add the dependency
+## 🚀 Quick Start
 
-Add `boxlang-spring-boot-starter` to your project as shown in the [Installation](#installation) section.
+Get a BoxLang-powered Spring Boot application running in minutes.
 
-### 2. Create a controller
+### Step 1 — Add the dependency
+
+Add `boxlang-spring-boot-starter` to your project as shown in the [Installation](#-installation) section.
+
+### Step 2 — Create a Spring MVC controller
 
 ```java
+import org.springframework.stereotype.Controller;
+import org.springframework.ui.Model;
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.RequestParam;
+
 @Controller
 public class HomeController {
 
@@ -113,15 +152,25 @@ public class HomeController {
     }
 
     @GetMapping( "/greeting" )
-    public String greeting( @RequestParam( defaultValue = "World" ) String name, Model model ) {
+    public String greeting(
+        @RequestParam( name = "name", defaultValue = "World" ) String name,
+        Model model
+    ) {
         model.addAttribute( "name", name );
-        model.addAttribute( "message", "Hello, " + name + "!" );
+        model.addAttribute( "message", "Welcome, " + name + "!" );
         return "greeting"; // resolves to classpath:/templates/greeting.bxm
+    }
+
+    @GetMapping( "/items" )
+    public String items( Model model ) {
+        model.addAttribute( "items", java.util.List.of( "Apple", "Banana", "Cherry" ) );
+        model.addAttribute( "count", 3 );
+        return "items"; // resolves to classpath:/templates/items.bxm
     }
 }
 ```
 
-### 3. Create BoxLang templates
+### Step 3 — Create BoxLang templates
 
 Place `.bxm` templates under `src/main/resources/templates/`:
 
@@ -133,12 +182,20 @@ Place `.bxm` templates under `src/main/resources/templates/`:
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>#variables.title#</title>
 </head>
 <body>
-	<!-- You can use the variable without the #variables prefix, if you want, for less verbosity -->
+    <!-- Variables are available directly or via the variables scope -->
     <h1>#title#</h1>
     <p>Framework: #framework#</p>
+    <p>Rendered at: #dateTimeFormat( now(), "full" )#</p>
+
+    <ul>
+        <li><a href="/greeting">Default greeting</a></li>
+        <li><a href="/greeting?name=Developer">Greeting with name</a></li>
+        <li><a href="/items">Items list</a></li>
+    </ul>
 </body>
 </html>
 </bx:output>
@@ -156,23 +213,54 @@ Place `.bxm` templates under `src/main/resources/templates/`:
 </head>
 <body>
     <h1>#variables.message#</h1>
-    <p>You requested a greeting for: <strong>#encodeForHTML( variables.name )#</strong></p>
+    <!-- Always encode user input to prevent XSS -->
+    <p>Greeting for: <strong>#encodeForHTML( variables.name )#</strong></p>
+    <p><a href="/">&larr; Back to home</a></p>
 </body>
 </html>
 </bx:output>
 ```
 
-Spring attributes added via `model.addAttribute(...)` are available inside templates as `#variables.key#` or just `#key#` for convenience. You can also use any BoxLang functions or features as needed.
+**`src/main/resources/templates/items.bxm`**
 
-### 4. Run the application
+```html
+<bx:output>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Items List</title>
+</head>
+<body>
+    <h1>Items (#variables.count#)</h1>
+    <ul>
+        <bx:loop array="#variables.items#" item="item">
+            <li>#encodeForHTML( item )#</li>
+        </bx:loop>
+    </ul>
+    <p><a href="/">&larr; Back to home</a></p>
+</body>
+</html>
+</bx:output>
+```
+
+> 💡 Spring attributes added via `model.addAttribute(...)` are available inside templates as `#variables.key#` or just `#key#` for convenience. You can use any BoxLang built-in functions, tags, and features.
+
+### Step 4 — Run the application
 
 ```bash
+# Gradle
 ./gradlew bootRun
-# or
+
+# Maven
 mvn spring-boot:run
 ```
 
-## Configuration
+Open your browser at **http://localhost:8080** and you should see your BoxLang-rendered page! 🎉
+
+---
+
+## ⚙️ Configuration
 
 All properties use the `boxlang.*` prefix in `application.properties` or `application.yml`.
 
@@ -196,7 +284,7 @@ boxlang.suffix=.bxm
 # Optional: explicit path to a custom boxlang.json
 # boxlang.config-path=classpath:/boxlang.json
 
-# Optional: adjust resolver priority
+# Optional: adjust resolver priority when mixing with other view technologies
 # boxlang.view-resolver-order=1
 
 # Optional: enable BoxLang debug mode
@@ -204,6 +292,10 @@ boxlang.suffix=.bxm
 
 # Optional: override the BoxLang runtime home (default: ~/.boxlang)
 # boxlang.runtime-home=/app/.boxlang
+
+# Logging
+logging.level.ortus.boxlang=WARN
+logging.level.org.springframework.web=INFO
 ```
 
 ### Example `application.yml`
@@ -214,9 +306,18 @@ boxlang:
   suffix: .bxm
   # config-path: classpath:/boxlang.json
   # view-resolver-order: 1
+  # debug-mode: false
+  # runtime-home: /app/.boxlang
+
+logging:
+  level:
+    ortus.boxlang: WARN
+    org.springframework.web: INFO
 ```
 
-## BoxLang Configuration (`boxlang.json`)
+---
+
+## 📄 BoxLang Configuration (`boxlang.json`)
 
 If no `boxlang.config-path` is set, the auto-configuration probes for `classpath:/boxlang.json` automatically. If that file is absent, BoxLang starts with its built-in defaults.
 
@@ -234,106 +335,294 @@ Place `boxlang.json` at `src/main/resources/boxlang.json` to customise language 
 }
 ```
 
-Full `boxlang.json` documentation: https://boxlang.ortusbooks.com/configuration
+📚 Full `boxlang.json` documentation: https://boxlang.ortusbooks.com/configuration
 
-## How It Works
+---
+
+## 🌐 Template Scopes & Model Integration
+
+BoxLang templates rendered through the view engine have access to all standard BoxLang web scopes:
+
+| Scope | Description |
+|---|---|
+| `variables` | Contains all Spring `Model` attributes plus template-local variables |
+| `url` | Query string parameters from the HTTP request |
+| `form` | Form POST data |
+| `cgi` | CGI/server environment variables |
+| `cookie` | HTTP cookies |
+| `request` | Request-scoped storage (per HTTP request) |
+
+**Accessing Spring Model attributes:**
+
+```html
+<bx:output>
+    <!-- Both forms are equivalent -->
+    <p>#variables.title#</p>
+    <p>#title#</p>
+
+    <!-- Access URL query params -->
+    <p>Page: #url.page ?: 1#</p>
+
+    <!-- Access cookies -->
+    <p>Theme: #cookie.theme ?: "light"#</p>
+</bx:output>
+```
+
+> 🔒 **Security tip:** Always use `encodeForHTML()` when outputting user-supplied values (e.g., URL or form parameters) to prevent XSS attacks.
+
+---
+
+## 🔍 How It Works
 
 1. **Auto-configuration** — `BoxLangAutoConfiguration` is registered via `META-INF/spring/org.springframework.boot.autoconfigure.AutoConfiguration.imports` and activates on any Servlet-based Spring web application.
 2. **Runtime lifecycle** — the `BoxRuntime` is started via `SmartLifecycle` at phase `Integer.MIN_VALUE + 100` (very early), ensuring it is ready before the first HTTP request arrives. It shuts down gracefully when the application context stops.
-3. **View resolution** — `BoxLangViewResolver` resolves logical view names to resources using the configured `prefix` + `viewName` + `suffix` pattern. If the resource does not exist, it returns `null` and Spring continues to the next resolver in the chain.
+3. **View resolution** — `BoxLangViewResolver` resolves logical view names to resources using the configured `prefix` + `viewName` + `suffix` pattern. If the resource does not exist, it returns `null` and Spring continues to the next resolver in the chain, enabling seamless coexistence with other view technologies.
 4. **Template rendering** — `BoxLangView` wraps the `HttpServletRequest` and `HttpServletResponse` in a `SpringBoxHTTPExchange`, constructs a `WebRequestBoxContext` (which exposes all BoxLang web scopes), injects the Spring `Model` map into the `variables` scope, executes the template, and flushes the output buffer to the servlet response.
 
-## Project Structure
+---
+
+## 📁 Project Structure
 
 ```
 boxlang-spring-boot-starter/
-├── src/main/java/ortus/boxlang/web/springboot/
-│   ├── BoxLangAutoConfiguration.java   # Spring Boot auto-configuration entry point
-│   ├── BoxLangProperties.java          # Bound configuration properties (boxlang.*)
-│   ├── exchange/
-│   │   └── SpringBoxHTTPExchange.java  # Adapts Servlet request/response to BoxLang's HTTP exchange interface
-│   └── view/
-│       ├── BoxLangViewResolver.java    # ViewResolver that maps view names to .bxm templates
-│       └── BoxLangView.java            # View implementation that executes BoxLang templates
-├── src/main/resources/
-│   └── META-INF/spring/
-│       └── org.springframework.boot.autoconfigure.AutoConfiguration.imports
-└── test-app/                           # Runnable integration test application
-    └── src/main/
-        ├── java/.../HomeController.java
-        └── resources/templates/        # Example .bxm templates
+├── src/
+│   ├── main/
+│   │   ├── java/ortus/boxlang/web/springboot/
+│   │   │   ├── BoxLangAutoConfiguration.java     # Spring Boot auto-configuration entry point
+│   │   │   ├── BoxLangProperties.java            # Bound configuration properties (boxlang.*)
+│   │   │   ├── exchange/
+│   │   │   │   └── SpringBoxHTTPExchange.java    # Adapts Servlet request/response to BoxLang's HTTP exchange interface
+│   │   │   └── view/
+│   │   │       ├── BoxLangViewResolver.java      # ViewResolver that maps view names to .bxm templates
+│   │   │       └── BoxLangView.java              # View implementation that executes BoxLang templates
+│   │   └── resources/
+│   │       └── META-INF/spring/
+│   │           └── org.springframework.boot.autoconfigure.AutoConfiguration.imports
+│   └── test/
+│       └── java/ortus/boxlang/web/springboot/   # JUnit 5 unit & integration tests
+├── test-app/                                      # Runnable Spring Boot integration app
+│   └── src/main/
+│       ├── java/.../HomeController.java           # Example controllers
+│       └── resources/
+│           ├── application.properties
+│           ├── application-dev.properties         # Dev profile (hot-reload enabled)
+│           ├── boxlang.json                       # BoxLang runtime configuration
+│           └── templates/                         # Example .bxm templates
+│               ├── home.bxm
+│               ├── greeting.bxm
+│               └── items.bxm
+├── build.gradle
+├── gradle.properties
+└── settings.gradle
 ```
 
-## Development Tips
+---
 
-### Hot-Reloading Templates
+## 💻 Development Setup
 
-By default the `boxlang.prefix` points at `classpath:/templates/`, which resolves to the compiled output directory (`build/resources/main/templates/`). Editing a `.bxm` source file has no effect until Gradle copies the updated resource — meaning a restart is usually required.
+Follow these steps to get a local development environment up and running.
 
-**To get instant hot-reload without a restart**, switch the prefix to a `file:` path that points at the source tree. The easiest way is a Spring dev profile.
+### Prerequisites
 
-#### 1. Create `application-dev.properties`
+- ☕ **JDK 21+** — verify with `java -version`
+- 🐘 **Gradle wrapper** is included — no separate Gradle installation required
+
+### 1. Clone the repository
+
+```bash
+git clone https://github.com/ortus-boxlang/boxlang-spring-boot-starter.git
+cd boxlang-spring-boot-starter
+```
+
+### 2. Build the library
+
+```bash
+./gradlew build
+```
+
+This compiles the source, downloads BoxLang JARs, runs all tests, and produces the output JAR in `build/libs/`.
+
+### 3. Run the included test application
+
+```bash
+cd test-app
+../gradlew bootRun
+```
+
+Or from the project root:
+
+```bash
+./gradlew :test-app:bootRun
+```
+
+Then open **http://localhost:8080** in your browser. You should see:
+
+- **`/`** — Home page rendered by `home.bxm`
+- **`/greeting`** — Default greeting rendered by `greeting.bxm`
+- **`/greeting?name=YourName`** — Personalised greeting
+- **`/items`** — Item list rendered by `items.bxm`
+
+### JVM Arguments
+
+The test application requires specific JVM flags for BoxLang reflection access. These are pre-configured in `test-app/build.gradle`:
+
+```groovy
+bootRun {
+    jvmArgs = [
+        '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
+        '--add-opens', 'java.base/java.lang.reflect=ALL-UNNAMED'
+    ]
+}
+```
+
+If you run the JAR directly or from an IDE, add the same flags to your run configuration:
+
+```bash
+java --add-opens java.base/java.lang=ALL-UNNAMED \
+     --add-opens java.base/java.lang.reflect=ALL-UNNAMED \
+     -jar test-app/build/libs/test-app-1.0.0.jar
+```
+
+---
+
+## 🔥 Hot-Reloading Templates
+
+By default, `boxlang.prefix` points at `classpath:/templates/`, which resolves to the compiled output directory (`build/resources/main/templates/`). Editing a `.bxm` source file has no effect until Gradle copies the updated resource — meaning a restart is usually required.
+
+**To get instant hot-reload without a restart**, switch the prefix to a `file:` path that points directly at the source tree using a Spring dev profile.
+
+### 1. Create `src/main/resources/application-dev.properties`
 
 ```properties
 # Load templates directly from the source tree — edits take effect on the next request
 boxlang.prefix=file:src/main/resources/templates/
 
-# Enable BoxLang debug mode
+# Enable BoxLang debug mode in development
 boxlang.debug-mode=true
+
+# Verbose logging in development
+logging.level.ortus.boxlang=DEBUG
+logging.level.org.springframework.web=DEBUG
 ```
 
-The path `file:src/main/resources/templates/` is relative to the JVM working directory. When you run `./gradlew bootRun` from the project root the working directory is the project folder, so the path resolves correctly.
+> The path `file:src/main/resources/templates/` is relative to the JVM working directory. When you run `./gradlew bootRun` from the project root, the working directory is the project folder, so the path resolves correctly.
 
-#### 2. Activate the dev profile
+### 2. Activate the dev profile
 
 ```bash
+# Pass it as a command-line argument
 ./gradlew bootRun --args='--spring.profiles.active=dev'
+
+# Or set it permanently during development
+echo 'spring.profiles.active=dev' >> src/main/resources/application.properties
 ```
 
-Or set it permanently during development in `application.properties`:
+> ⚠️ **Keep the `classpath:` prefix for production.** The `file:` path works for local development but must not be used in packaged JARs or containers where the source tree is not present.
 
-```properties
-spring.profiles.active=dev
-```
+---
 
-> **Note:** Keep the `classpath:` prefix for the default / production profile. The `file:` path works for local development but should not be used in packaged JARs or containers where the source tree is not available.
-
-## Building from Source
+## 🔨 Building from Source
 
 ```bash
-# Build the library
+# Compile and package
 ./gradlew build
 
-# Run tests
+# Run all unit and integration tests
 ./gradlew test
 
-# Run the test application
-cd test-app && ./gradlew bootRun
+# Build without running tests
+./gradlew build -x test
+
+# View the test report
+open build/reports/tests/test/index.html
+
+# Publish to local Maven repository (~/.m2)
+./gradlew publishToMavenLocal
 ```
 
-## License
+---
+
+## 🧪 Running the Test Application
+
+The `test-app/` directory contains a fully functional Spring Boot application that exercises all starter features end-to-end.
+
+```bash
+# From the project root
+./gradlew :test-app:bootRun
+
+# With dev profile (hot-reload enabled)
+./gradlew :test-app:bootRun --args='--spring.profiles.active=dev'
+```
+
+**Available endpoints:**
+
+| Method | URL | Template |
+|---|---|---|
+| `GET` | `http://localhost:8080/` | `templates/home.bxm` |
+| `GET` | `http://localhost:8080/greeting` | `templates/greeting.bxm` |
+| `GET` | `http://localhost:8080/greeting?name=Alice` | `templates/greeting.bxm` |
+| `GET` | `http://localhost:8080/items` | `templates/items.bxm` |
+
+---
+
+## ✅ Running Tests
+
+```bash
+# Run all tests
+./gradlew test
+
+# Run a specific test class
+./gradlew test --tests "ortus.boxlang.web.springboot.BoxLangAutoConfigurationTest"
+
+# Run tests for the test-app
+./gradlew :test-app:test
+
+# Continuous test execution (re-runs on file changes)
+./gradlew test --continuous
+```
+
+Test reports are generated at `build/reports/tests/test/index.html`.
+
+---
+
+## 🛠️ IDE Tooling
+
+For the best BoxLang authoring experience, install the official **BoxLang IDE Extension**:
+
+- 🔌 **VS Code**: [BoxLang VSCode Extension](https://marketplace.visualstudio.com/items?itemName=ortus-solutions.vscode-boxlang)
+- 🔌 **IntelliJ IDEA**: Available via JetBrains Marketplace
+
+Features include syntax highlighting, code completion, formatting, and debugging support for `.bxm` and `.bx` files.
+
+📖 Full IDE setup guide: https://boxlang.ortusbooks.com/getting-started/ide-tooling
+
+---
+
+## 📜 License
 
 Apache License, Version 2.0.
 
-## Open-Source & Professional Support
+---
 
-This project is a professional open source project and is available as FREE and open source to use.  Ortus Solutions, Corp provides commercial support, training and commercial subscriptions which include the following:
+## 💼 Open-Source & Professional Support
 
-* Professional Support and Priority Queuing
-* Remote Assistance and Troubleshooting
-* New Feature Requests and Custom Development
-* Custom SLAs
-* Application Modernization and Migration Services
-* Performance Audits
-* Enterprise Modules and Integrations
-* Much More
+This project is a professional open source project and is available as **FREE** and open source to use. Ortus Solutions, Corp provides commercial support, training, and commercial subscriptions which include:
+
+- 🎯 Professional Support and Priority Queuing
+- 🖥️ Remote Assistance and Troubleshooting
+- 🚀 New Feature Requests and Custom Development
+- 📋 Custom SLAs
+- 🔄 Application Modernization and Migration Services
+- 📊 Performance Audits
+- 🧩 Enterprise Modules and Integrations
+- 🌟 Much More
 
 Visit us at [BoxLang.io Plans](https://boxlang.io/plans) for more information.
 
-## Ortus Sponsors
+## ❤️ Ortus Sponsors
 
 BoxLang is a professional open-source project and it is completely funded by the [community](https://patreon.com/ortussolutions) and [Ortus Solutions, Corp](https://www.ortussolutions.com). Ortus Patreons get many benefits like a cfcasts account, a FORGEBOX Pro account and so much more. If you are interested in becoming a sponsor, please visit our patronage page: [https://patreon.com/ortussolutions](https://patreon.com/ortussolutions)
 
-### THE DAILY BREAD
+## 🙏 THE DAILY BREAD
 
 > "I am the way, and the truth, and the life; no one comes to the Father, but by me (JESUS)" Jn 14:1-12
